# ERP_Rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE.BSL  LICENSE.LGPL  README.md  STUFF_TO_DO.md
code_gen/: Cargo.toml  README.md
code_gen/src/: attrs.rs  field.rs  lib.rs  model.rs  model_gen.rs  select.rs  shared_data.rs  the_main.rs  util.rs
code_gen/src/domain/: domain_gen.rs  mod.rs
code_gen/src/model/: attrs.rs  field.rs  mod.rs  model.rs  model_gen.rs  util.rs
core/: Cargo.toml
core/src/: app.rs  cache.rs  config.rs  environment.rs  field.rs  lib.rs  model.rs  plugin.rs
core/src/cache/: cache_field.rs  cache_model.rs  errors.rs
core/src/environment/: savepoint.rs
core/src/field/: field_descriptor.rs  field_type.rs  mod.rs
core/src/internal/: internal_field.rs  internal_model.rs
core/src/model/: map_of_fields.rs  model_descriptor.rs  model_manager.rs
core/src/plugin/: errors.rs  internal_plugin.rs  plugin_manager.rs
core/test_utilities/: Cargo.toml
core/test_utilities/src/: config.rs  lib.rs
core/test_utilities/src/models/: test_model.rs
core/tests/: test_environment.rs  test_internal_field.rs  test_internal_model.rs  test_plugin.rs
core/tests/models/: sale_order.rs
core/utilities/: Cargo.toml
erp/: Cargo.toml
erp/erp_cache/: Cargo.toml
erp/erp_cache/src/: cache.rs  errors.rs  field.rs  lib.rs  model.rs  models.rs
erp/erp_internal_types/: Cargo.toml
erp/erp_internal_types/src/: field.rs  lib.rs  model.rs
erp/erp_types/: Cargo.toml
erp/erp_types/src/: cache.rs  environment.rs  lib.rs
erp/erp_types/src/field/: error.rs  field_compute.rs  field_depends.rs  field_descriptor.rs  field_reference.rs  field_type.rs  id.rs  mod.rs  reference.rs
erp/erp_types/src/internal/: internal_field.rs  internal_model.rs  mod.rs
erp/erp_types/src/model/: map_of_fields.rs  mod.rs  model_descriptor.rs
erp/src/: app.rs  cache.rs  config.rs  environment.rs  errors.rs  lib.rs  model.rs  plugin.rs
erp/src/cache/: cache_field.rs  cache_model.rs  cache_models.rs  errors.rs
erp/src/database/: config.rs  database.rs  database_type.rs  field_type.rs  mod.rs
erp/src/database/cache/: database.rs  row.rs  table.rs
erp/src/database/postgres/: database.rs
erp/src/environment/: savepoint.rs
erp/src/field/: field_depends.rs  field_descriptor.rs  field_reference.rs  field_type.rs  id.rs  mod.rs  reference.rs
erp/src/internal/: internal_field.rs  internal_model.rs  mod.rs
erp/src/model/: errors.rs  iterator.rs  map_of_fields.rs  model_descriptor.rs  model_manager.rs
erp/src/plugin/: errors.rs  internal_plugin.rs  plugin_manager.rs
erp/src/search/: errors.rs  search_key.rs  search_operator.rs  search_tuple.rs  search_type.rs
erp/src/util/: dependency.rs  mod.rs  string.rs
erp/test_utilities/: Cargo.toml
erp/test_utilities/src/: config.rs  lib.rs
erp/test_utilities/src/models/: mod.rs  sale_order.rs  sale_order_line.rs  test_model.rs
erp/tests/: test_cache.rs  test_domain.rs  test_environment.rs  test_internal_field.rs  test_internal_model.rs  test_models.rs  test_plugin.rs  test_savepoint.rs
erp/tests/models/: mod.rs  sale_order.rs
erp_database/: Cargo.toml
erp_database/src/: config.rs  database.rs  lib.rs
erp_database/src/cache/: database.rs  mod.rs  row.rs  table.rs
erp_database/src/postgres/: database.rs
erp_search/: Cargo.toml
erp_search/src/: errors.rs  lib.rs  search_key.rs  search_operator.rs  search_tuple.rs  search_type.rs
erp_search_code_gen/: Cargo.toml
erp_search_code_gen/src/: lib.rs
erp_search_code_gen/src/domain/: domain_gen.rs  mod.rs  search_key.rs  util.rs
erp_search_code_gen/tests/: test_domain.rs
http/: Cargo.toml
http/src/: http_status.rs  lib.rs
lib/: Cargo.toml
lib/src/: lib.rs  model.rs
my_macro/: Cargo.toml
my_macro/src/: lib.rs
old_code_gen/: Cargo.toml
old_code_gen/src/: lib.rs  model.rs  select.rs
old_test_http/src/: lib.rs  method.rs
old_test_lib/: Cargo.toml
old_test_lib/src/: cache.rs  env.rs  field.rs  model.rs
old_test_lib/src/env/: context.rs
plugins/base/: Cargo.toml
plugins/base/src/: lib.rs  models.rs
plugins/base/src/models/: company.rs  contact.rs  country.rs  lang.rs  plugin.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: lib.rs
src/: main.rs
test_http/: Cargo.toml
test_lib/src/: cache.rs  env.rs  field.rs  lib.rs  macro.rs  model.rs
(+3 files in other folders)
