[package]
name = "rust-erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#h2 = "0.3.20"
#bytes = "1"
#http = "0.2"
#tokio = { version = "1.29", features = ["full"] }
#hyper = "1.0.0-rc.4"
#rocket = "0.5.0-rc.3"
#syn = "2.0"
#diesel = "2.1"
core = { path = "core" }
config = { version = "0.14.1", features = ["toml"] }
directories = "5.0.1"
serde = "1.0.214"

[workspace]
members = [
    "core",
    "plugins/test_plugin",
]
