[package]
name = "rust-erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#h2 = "0.3.20"
#bytes = "1"
#http = "0.2"
#tokio = { version = "1.29", features = ["full"] }
#hyper = "1.0.0-rc.4"
#rocket = "0.5.0-rc.3"
#syn = "2.0"
#diesel = "2.1"
erp = { path = "erp" }

[workspace]
members = [
    "code_gen",
    "erp", "erp_database",
    "erp_search",
    "erp_search_code_gen",
    "plugins/base",
    "plugins/test_plugin",
]
