[package]
name = "rust-erp"
version = "0.1.0"
edition = "2024"

[dependencies]
erp = { path = "erp" }

[workspace]
members = [
    "code_gen",
    "erp",
    "erp/erp_cache",
    "erp/erp_internal_types",
    "erp/erp_types",
    "erp_search",
    "erp_search_code_gen",
    "plugins/base",
    "plugins/test_plugin",
]

[workspace.dependencies]

config = { version = "0.15", features = ["toml"] }
directories = "6.0"
libloading = "0.9"
proc-macro2 = "1.0"
postgres = "0.19.10"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serial_test = "3.2.0"
syn = "2.0"
uuid = { version = "1.16.0", features = ["v4"] }
