[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
serde_derive = "1.0.214"
serde = { version = "1.0.214", features = ["derive"] }
libloading = "0.8.5"

[dev-dependencies]
test_utilities = { path = "test_utilities" }
test_plugin = { path = "../plugins/test_plugin" }

