[package]
name = "erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
libloading = "0.8"
config = { version = "0.15", features = ["toml"] }
directories = "6.0"

erp_database = { path = "../erp_database" }
erp_search = { path = "../erp_search" }
erp_search_code_gen = { path = "../erp_search_code_gen" }

[dev-dependencies]
test_utilities = { path = "test_utilities" }
# Temporary solution. To remove later
test_plugin = { path = "../plugins/test_plugin" }
base = { path = "../plugins/base" }
serial_test = "3.2.0"
