[package]
name = "erp"
version = "0.1.0"
edition = "2024"

[dependencies]
config.workspace = true
directories.workspace = true
libloading.workspace = true
postgres.workspace = true
serde.workspace = true
serde_derive.workspace = true
uuid.workspace = true

erp_cache = { path = "erp_cache" }
erp_internal_types = { path = "erp_internal_types" }
erp_types = { path = "erp_types" }
erp_search = { path = "../erp_search" }
erp_search_code_gen = { path = "../erp_search_code_gen" }

[dev-dependencies]
test_utilities = { path = "test_utilities" }
# Temporary solution. To remove later
test_plugin = { path = "../plugins/test_plugin" }
base = { path = "../plugins/base" }
serial_test.workspace = true
